# erasgame

./: .gitignore  CMakeLists.txt  NEXT_STEPS.md  README.md  run_local.sh  test_build.sh
docs/: GETTING_STARTED.md  RAYLIB_SETUP.md  TECHNICAL_DESIGN.md
src/: main.c
